// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.Blue renders without errors 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm dialog-icon-info hover:bg-blue-700 bg-blue-600 text-white"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.BorderedGray renders without errors 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm button hover:bg-gray-400 bg-gray-300 text-gray-800 shadow-sm
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500 ring-1 ring-gray-400 shadow-sm dark:ring-0
    disabled:ring-gray-400 disabled:dark:ring-neutral-500"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.Gray renders without errors 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm button hover:bg-gray-400 bg-gray-300 text-gray-800 shadow-sm
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.Green renders without errors 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm dialog-icon-success hover:bg-green-800 bg-green-700 text-white"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.Icon renders without errors 1`] = `
<DocumentFragment>
  <button
    aria-label="Title"
    class="icon link rounded"
    icon="cog"
    title="Title"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="w-6 h-6 flex-shrink-0"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button.LikeLink renders without errors 1`] = `
<DocumentFragment>
  <button
    class="link"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.LikeLink renders without errors 2`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm bg-gray-300 hover:bg-brand-200 dark:bg-neutral-600
    hover:dark:bg-brand:400 text-gray-800 dark:text-white text-center"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.Orange renders without errors 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm dialog-icon-warning hover:bg-orange-600 bg-orange-500 text-white"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.Red renders without errors 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm dialog-icon-error hover:bg-red-800 bg-red-700 text-white"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.Small custom variant 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm !py-1 !px-2 a dialog-icon-info hover:bg-blue-700 bg-blue-600 text-white"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button.Small default variant 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm !py-1 !px-2 button hover:bg-gray-400 bg-gray-300 text-gray-800 shadow-sm
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500 ring-1 ring-gray-400 shadow-sm dark:ring-0
    disabled:ring-gray-400 disabled:dark:ring-neutral-500 hover:bg-brand-200 dark:hover:bg-brand-400"
    type="button"
  />
</DocumentFragment>
`;

exports[`DialogButton closes the dialog 1`] = `
<DocumentFragment>
  <button
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm button hover:bg-gray-400 bg-gray-300 text-gray-800 shadow-sm
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500"
    type="button"
  >
    View
  </button>
</DocumentFragment>
`;
